<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="ElectricalDeviceContOper" Id="{7a30059a-a33b-4d59-9eaf-d6bf3bb56ce2}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK ElectricalDeviceContOper
VAR_INPUT
	LineName					: STRING(40);
	MachineName 				: STRING(40);
	DeviceName					: STRING(40);
	TimeStamp					: ULINT;
	DeviceElectricalData 		: ElectrDataModbusTCP;
	Enable						: BOOL;
END_VAR
VAR_OUTPUT
	OpcUaVal					: ElectrDeviceContOper_DataModel;	
END_VAR
VAR
	SetParameter 				: BOOL := TRUE;		
	
	stValues					: ElectrDeviceContOper_DataModel;		
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*
This FB evaluates continously  electrical data from Sentron 7KT PAC1200 
and creates output struct for OPC UA
*)

IF Enable THEN	
		
		IF SetParameter THEN
			SetParameter := FALSE;
	
			// constant entry in json payload
			stValues.LineName := LineName;
			stValues.MachineName := MachineName;
			stValues.DeviceName := DeviceName;
		END_IF
		
		stValues.TimeStamp := TimeStamp;
		stValues.ElectricalData := DeviceElectricalData;
		OpcUaVal := stValues;
ELSE
		;
END_IF

]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>